# pymigbench_dl

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run.sh
experiments/: config.sh  download_commit_example.sh  download_example.sh  download_pymigbench.py.old  get_parent_commit.sh  parent_commit.json
src/: __init__.py  downloader.py  github_client.py  pymigbench_loader.py
src/pymigbench_dl/: __init__.py  downloader.py  loader.py
src/pymigbench_dl/cli/: main.py
src/pymigbench_dl/const/: __init__.py  git.py
src/pymigbench_dl/providers/github/: client.py  models.py
src/pymigbench_dl/utils/: fs.py  git.py  paths.py  repo.py
tests/: test-dl-all.py  test-dl-all.sh  test-dl-single.py  test-dl-single.sh
tests/dl-all/data/repo-yamls/: fakeauthor__fakerepo__itzkvn@python-http-monitoring__0a4830.yaml
